# delivery_services

./: .env.example  .pre-commit-config.yaml  Dockerfile  DockerfileTest  README.md  docker-compose.test.yml  docker-compose.yaml  makefile  pyproject.toml  up.ps1
docker/: Dockerfile.test  app.Dockerfile  app.entrypoint.sh  worker.Dockerfile  worker.entrypoint.sh
migrations/: env.py
src/: alembic.ini  dependencies.py  main.py
src/alembic/: env.py
src/alembic/versions/: 0001_create_tables_parcels_and_parcel_types.py  0001_init.py  0002_alter_parcels_created_at_default_to_now.py  0002_init.py  0003_seed_default_parcel_types.py  0003_seed_parcel_types.py  0004_add_session_public_id.py  0004_add_session_public_id_to_parcels_and_indexes.py
src/app/: config.py  logging.py  main.py
src/app/api/: analytics.py  deps.py  parcels.py  responses.py  types.py  utils.py
src/app/db/: base.py  postgres.py
src/app/middleware/: session.py
src/app/models/: base.py  parcel.py  parcel_type.py
src/app/repository/: parcel_repo.py  type_repo.py
src/app/schemas/: errors.py  pagination.py  parcel.py  parcel_compat.py  parcel_type.py
src/app/services/: audit.py  calc.py  mongo.py  mq_producer.py  rates.py
src/app/services/mappers/: parcel_mapper.py  type_mapper.py
src/app/services/usecases/: parcel_service.py  type_service.py
src/app/templates/: base.html  home.html  parcels.html
src/app/workers/: consumer.py
src/core/: database.py  session.py  settings.py
src/models/: models.py  schemas.py
src/routers/: packages.py
src/services/: package_service.py
tests/: conftest.py  test_misc.py  test_register_get_list.py  test_register_validation.py  test_session_isolation.py  test_types.py
